--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
 <h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mis Frases Favoritas</title>
+    <style>
+        /* Aquí definimos los colores y estilos */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5; /* Color de fondo de la página */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 50px;
+        }
+
+        h1 {
+            color: #333;
+            border-bottom: 2px solid #007bff;
+        }
+
+        .contenedor {
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            max-width: 500px;
+        }
+
+        .frase-azul {
+            color: #007bff;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+
+        .frase-rosa {
+            color: #e91e63;
+            font-style: italic;
+            font-size: 1.2rem;
+        }
+
+        .frase-verde {
+            color: #28a745;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        p {
+            margin: 15px 0;
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Bienvenido a mi sitio de GitHub</h1>
+
+    <div class="contenedor">
+        <p class="frase-azul">"El único modo de hacer un gran trabajo es amar lo que haces."</p>
+        
+        <p class="frase-rosa">"La creatividad es la inteligencia divirtiéndose."</p>
+        
+        <p class="frase-verde">"Hazlo simple, pero significativo."</p>
+
+        <p style="color: orange; font-size: 14px;">— Esta frase tiene color directo sin usar clases.</p>
+    </div>
+
+</body>
+</html>
