--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)
+\\<h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -60,14 +60,14 @@
     <!-- CAJA SUPERIOR (HEADER) -->
     <header class="barra-superior">
         <!-- Reemplaza la URL en 'src' con tu propio logo después -->
-        <img src="github.githubassets.com" alt="Logo" class="logo">
-        <h2 class="titulo-logo">Mi Portafolio</h2>
+        <img src="" alt="Logo" class="logo">
+        <h2 class="titulo-logo">SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h2>
     </header>
 
     <h1>Frases del 2025</h1>
 
     <div class="contenedor">
-        <p class="frase-azul">"El código es como el humor; cuando tienes que explicarlo, es malo."</p>
+        <p class="frase-azul">"Sitio Web en contrucción"</p>
         <p style="color: #666;">Bienvenido a mi sitio actualizado con una barra de navegación.</p>
     </div>
 
