--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-\\<h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)
+/*<h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)*/
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -60,7 +60,7 @@
     <!-- CAJA SUPERIOR (HEADER) -->
     <header class="barra-superior">
         <!-- Reemplaza la URL en 'src' con tu propio logo después -->
-        <img src="" alt="Logo" class="logo">
+        <img src="logotipo.png" alt="Logo" class="logo">
         <h2 class="titulo-logo">SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h2>
     </header>
 
