--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-/*<h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)*/
+ // <h1>SITIO WEB PARA LA SEGURIDAD OPERACIONAL SOLAR CARGO C.A!</h1>)
 <!DOCTYPE html>
 <html lang="es">
 <head>
