--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
             <span class="material-icons me-2">shield</span>
-            <strong>PORTAL SMS ESTELAR</strong>
+            <strong>PORTAL SMS SOLARC </strong>
         </a>
     </div>
 </nav>
 
 <header class="hero-banner text-center">
     <div class="container">
-        <h1 class="display-5 fw-bold">Sistema de Gestión de Seguridad</h1>
+        <h1 class="display-5 fw-bold">Sistema de Gestión de Seguridad Operacional</h1>
         <p class="lead">Bienvenido al centro de recursos y reportabilidad de 2025.</p>
     </div>
 </header>
