--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row g-4 justify-content-center text-center">
             <!-- BOTÓN REPORTE OBLIGATORIO -->
             <div class="col-md-6 col-lg-3">
-                <a href="obligatorio.html" target="_blank" class="btn-card p-4 shadow-sm">
+                <a href="reporteVoluntario.html" target="_blank" class="btn-card p-4 shadow-sm">
                     <span class="material-icons icon-box text-danger">gavel</span>
                     <h5 class="fw-bold">Reporte Obligatorio</h5>
                     <p class="small text-muted">Notificación formal de incidentes ocurridos.</p>
