--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <!-- BOTÓN REPORTE VOLUNTARIO -->
             <div class="col-md-6 col-lg-3">
-                <a href="voluntario.html" target="_blank" class="btn-card p-4 shadow-sm">
+                <a href="reporteVoluntario.html" target="_blank" class="btn-card p-4 shadow-sm">
                     <span class="material-icons icon-box">assignment</span>
                     <h5 class="fw-bold">Reporte Voluntario</h5>
                     <p class="small text-muted">Reporte preventivo de condiciones inseguras.</p>
