--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
             <!-- BOTÓN REPORTE OBLIGATORIO -->
             <div class="col-md-6 col-lg-3">
-                <a href="obligatorio.html" target="_blank" class="btn-card shadow-sm">
+                <a href="ReporteObligarotio.html" target="_blank" class="btn-card shadow-sm">
                     <span class="material-icons icon-box text-danger">report_gmailerrorred</span>
                     <h5 class="fw-bold">Reporte Obligatorio</h5>
                     <p class="small text-muted mb-0">Notificación de accidentes e incidentes normativos.</p>
