--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             <!-- BOTÓN REPORTE VOLUNTARIO -->
             <div class="col-md-6 col-lg-3">
-                <a href="voluntario.html" target="_blank" class="btn-card shadow-sm">
+                <a href="reporteVoluntario.html" target="_blank" class="btn-card shadow-sm">
                     <span class="material-icons icon-box text-primary">verified_user</span>
                     <h5 class="fw-bold">Reporte Voluntario</h5>
                     <p class="small text-muted mb-0">Identificación de peligros y reporte confidencial.</p>
