--- a/ReporteObligarotio.html
+++ b/ReporteObligarotio.html
@@ -27,7 +27,7 @@
                     <label class="form-label fw-bold">Descripción del Incidente</label>
                     <textarea class="form-control" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-danger w-100 fw-bold">CONSIGNAR REPORTE OFICIAL</button>
+                <button type="submit" class="btn btn-danger w-100 fw-bold">ENVIAR REPORTE OFICIAL</button>
             </form>
         </div>
     </div>
