--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <!-- Logo miniatura opcional -->
                 <img src="logo.png" alt="Logo" height="35" class="me-2">
-                <span class="fw-bold small">PORTAL SMS ESTELAR</span>
+                <span class="fw-bold small">PORTAL SMS SOLAR C</span>
             </a>
         </div>
     </nav>
