--- a/ReporteObligarotio.html
+++ b/ReporteObligarotio.html
@@ -10,26 +10,6 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="form-container shadow mx-auto" style="max-width: 700px;">
-            <h2 class="text-danger fw-bold">Reporte Obligatorio de Seguridad</h2>
-            <hr>
-            <form>
-                <div class="mb-3">
-                    <label class="form-label fw-bold">Fecha y Hora del Suceso</label>
-                    <input type="datetime-local" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label fw-bold">Lugar Exacto</label>
-                    <input type="text" class="form-control" placeholder="Especifique área">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label fw-bold">Descripción del Incidente</label>
-                    <textarea class="form-control" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-danger w-100 fw-bold">ENVIAR REPORTE OFICIAL</button>
-            </form>
-        </div>
-    </div>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebigQYuA9ilkNR6hSm627Jg3DBjXshHKHUdS8mUqe3xhpHeQ/viewform?embedded=true" width="640" height="1140" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 </body>
 </html>
