--- a/ReporteObligarotio.html
+++ b/ReporteObligarotio.html
@@ -10,6 +10,25 @@
     </style>
 </head>
 <body>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebigQYuA9ilkNR6hSm627Jg3DBjXshHKHUdS8mUqe3xhpHeQ/viewform?embedded=true" width="640" height="1140" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+<div class="google-form-container">
+    <iframe 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSebigQYuA9ilkNR6hSm627Jg3DBjXshHKHUdS8mUqe3xhpHeQ/viewform?embedded=true" 
+        width="100%" 
+        height="800" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0">
+        Cargando…
+    </iframe>
+</div>
+
+<style>
+    .google-form-container {
+        width: 100%;
+        max-width: 640px; /* Ancho máximo para que no se estire demasiado en PC */
+        margin: 0 auto;   /* Centrarlo en la página */
+        display: block;
+    }
+</style>
 </body>
 </html>
