--- a/ReporteObligarotio.html
+++ b/ReporteObligarotio.html
@@ -10,7 +10,7 @@
     <iframe 
         src="https://docs.google.com/forms/d/e/1FAIpQLSebigQYuA9ilkNR6hSm627Jg3DBjXshHKHUdS8mUqe3xhpHeQ/viewform?embedded=true" 
         width="100%" 
-        height="800" 
+        height="100%" 
         frameborder="0" 
         marginheight="0" 
         marginwidth="0">
@@ -20,7 +20,7 @@
 <style>
     .google-form-container {
         width: 100%;
-        max-width: 640px; /* Ancho máximo para que no se estire demasiado en PC */
+        max-width: 100%; /* Ancho máximo para que no se estire demasiado en PC */
         margin: 0 auto;   /* Centrarlo en la página */
         display: block;
     }
