--- a/ReporteObligarotio.html
+++ b/ReporteObligarotio.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <title>Nuevo Reporte Obligatorio</title>
-    <link href="cdn.jsdelivr.net" rel="stylesheet">
-</head>
-<body>
-<div class="google-form-container">
-    <iframe 
-        src="https://docs.google.com/forms/d/e/1FAIpQLSebigQYuA9ilkNR6hSm627Jg3DBjXshHKHUdS8mUqe3xhpHeQ/viewform?embedded=true" 
-        width="100%" 
-        height="100%" 
-        frameborder="0" 
-        marginheight="0" 
-        marginwidth="0">
-    </iframe>
-</div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reporte Obligatorio</title>
 
-<style>
-    .google-form-container {
-        width: 100%;
-        max-width: 100%; /* Ancho máximo para que no se estire demasiado en PC */
-        margin: 0 auto;   /* Centrarlo en la página */
-        display: block;
-    }
-</style>
+    <!-- Google Fonts: Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Custom Styles -->
+    <link href="styles.css" rel="stylesheet">
+</head>
+
+<body class="form-page">
+    <a href="index.html" class="back-home-btn">
+        <span class="material-icons">arrow_back</span>
+        <span>Volver al Inicio</span>
+    </a>
+    <img src="logo.png" alt="Solar Cargo Logo" class="brand-logo">
+    <div class="google-form-wrapper">
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSebigQYuA9ilkNR6hSm627Jg3DBjXshHKHUdS8mUqe3xhpHeQ/viewform?embedded=true"
+            title="Formulario de Reporte" allowfullscreen>
+        </iframe>
+    </div>
 </body>
+
 </html>
