--- a/informacion.html
+++ b/informacion.html
@@ -35,10 +35,9 @@
         <div class="info-section">
             <div class="info-text">
                 <h2>MISIÓN</h2>
-                <p>Garantizar los más altos estándares de seguridad en todas nuestras operaciones aéreas, promoviendo
-                    una cultura de prevención y mejora continua que proteja a nuestro personal, clientes y activos. Nos
-                    comprometemos a identificar peligros y gestionar riesgos de manera proactiva para asegurar la
-                    integridad de cada vuelo.</p>
+                <p>Ofrecer Transporte Aéreo de Carga a Nivel Nacional e Internacional bajo rutas
+                Competitivas que satisfagan los requerimientos de nuestros clientes, permitiendo el
+                Engranaje comercial en el área del Caribe, Sudamérica y Venezuela.</p>
             </div>
             <div class="info-image">
                 <img src="https://placehold.co/600x400/122348/FFF?text=Mision+Solar+Cargo" alt="Misión">
@@ -49,9 +48,10 @@
         <div class="info-section reverse">
             <div class="info-text">
                 <h2>VISIÓN</h2>
-                <p>Ser reconocidos globalmente como líderes en seguridad operacional en la industria de carga aérea,
-                    estableciendo referentes de excelencia y confiabilidad. Aspiramos a un entorno donde la seguridad
-                    sea el valor central que guíe cada decisión y acción de nuestra organización.</p>
+                <p>Lograr reconocimientos en el entorno Nacional e Internacional, como empresa de Transporte 
+                Aéreo de Carga, capaz de ofrecer un servicio de excelente calidad, con Beneficios que cumplan 
+                con las expectativas de los entes involucrados, permaneciendo en el mercado como organización 
+                exitosa, competitiva y de altos valores éticos y morales.</p>
             </div>
             <div class="info-image">
                 <img src="https://placehold.co/600x400/4facfe/FFF?text=Vision+Solar+Cargo" alt="Visión">
@@ -200,5 +200,6 @@
     </div>
 
 </body>
+
 
 </html>
