--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <span class="material-icons">location_on</span>
-                <p>Rampa 28,<br>Aeropuerto Internacional Simón Bolívar,<br>Maiquetía.</p>
+                <p>Rampa 28,<br>Aeropuerto Internacional Simón Bolívar,<br>Maiquetía, Edo La Guaira.</p>
             </div>
             <div class="footer-section">
                 <span class="material-icons">phone</span>
