--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main class="main-content">
         <p class="welcome-text">Bienvenido al Portal SMS</p>
-        <h1 class="main-title">Sistema de Gestión de <br>Seguridad Operacional <span>Solar Cargo</span></h1>
+        <h1 class="main-title">Sistema de Gestión de Seguridad Operacional <span>Solar Cargo</span></h1>
 
         <div class="action-menu">
             <a href="reporteVoluntario.html" class="menu-btn">
