--- a/politicas.html
+++ b/politicas.html
@@ -34,7 +34,7 @@
         <div class="policies-grid">
             <!-- Política 1 -->
             <div class="policy-card" onclick="openModal('https://placehold.co/600x800/png?text=FOTO+POLITICA+1')">
-                <img src="POLITICA DE SEGURIDAD OPERACIONAL SMS 2025.pdf" alt="Política de Seguridad Placeholder">
+                <img src="POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png" alt="Política de Seguridad Placeholder">
                 <div class="policy-overlay">
                     <!-- Icon removed -->
                 </div>
@@ -98,3 +98,4 @@
 
 
 </html>
+
