--- a/politicas.html
+++ b/politicas.html
@@ -33,7 +33,7 @@
 
         <div class="policies-grid">
             <!-- Política 1 -->
-            <div class="policy-card" onclick="openModal('POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png')">
+            <div class="policy-card" onclick="openModal('https://placehold.co/600x800/png?text=POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png')">
                 <img src="POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png" alt="Política de Seguridad Placeholder">
                 <div class="policy-overlay">
                     <!-- Icon removed -->
@@ -98,5 +98,6 @@
 
 
 </html>
+
 
 
