--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="footer-section">
                 <span class="material-icons">email</span>
-                <p>sms@solar-cargo.com</p>
+                <p>sms@solar-cargo.com.<br>sms.solarcargo@gmail.com.<br>Reywinfajardo.solarcargo@gmail.com.</p>
             </div>
         </div>
         <div class="copyright">
