--- a/informacion.html
+++ b/informacion.html
@@ -32,6 +32,7 @@
         </div>
 
         <!-- Misión Section -->
+         <!-- src="https://placehold.co/600x400/122348/FFF?text=Mision+Solar+Cargo" -->
         <div class="info-section">
             <div class="info-text">
                 <h2>MISIÓN</h2>
@@ -40,11 +41,12 @@
                 Engranaje comercial en el área del Caribe, Sudamérica y Venezuela.</p>
             </div>
             <div class="info-image">
-                <img src="https://placehold.co/600x400/122348/FFF?text=Mision+Solar+Cargo" alt="Misión">
+                <img src="Mision.jpg" alt="Misión">
             </div>
         </div>
 
         <!-- Visión Section -->
+        <!-- src="https://placehold.co/600x400/4facfe/FFF?text=Vision+Solar+Cargo" -->
         <div class="info-section reverse">
             <div class="info-text">
                 <h2>VISIÓN</h2>
@@ -54,7 +56,7 @@
                 exitosa, competitiva y de altos valores éticos y morales.</p>
             </div>
             <div class="info-image">
-                <img src="https://placehold.co/600x400/4facfe/FFF?text=Vision+Solar+Cargo" alt="Visión">
+                <img src="Vision.png" alt="Visión">
             </div>
         </div>
 
@@ -203,3 +205,4 @@
 
 
 </html>
+
