--- a/informacion.html
+++ b/informacion.html
@@ -41,7 +41,7 @@
                 Engranaje comercial en el área del Caribe, Sudamérica y Venezuela.</p>
             </div>
             <div class="info-image">
-                <img src="Mision.jpg" alt="Misión">
+                <img src="Mision.jpeg" alt="Misión">
             </div>
         </div>
 
@@ -205,5 +205,6 @@
 
 
 </html>
+
 
 
