--- a/politicas.html
+++ b/politicas.html
@@ -35,8 +35,8 @@
             <!-- Política 1 -->
             <!-- https://placehold.co/400x550/png?text=Tu+Foto+Aqui+1
                   https://placehold.co/600x800/png?text=FOTO+POLITICA+1 -->
-            <div class="policy-card" onclick="openModal('https://placehold.co/600x800/png?text=POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png')">
-                <img src="POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png" alt="Política de Seguridad Placeholder">
+            <div class="policy-card" onclick="openModal('POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png')">
+                <img src="POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png" alt="POLITICA DE SEGURIDAD OPERACIONAL SMS 2025_001.png">
                 <div class="policy-overlay">
                     <!-- Icon removed -->
                 </div>
@@ -100,6 +100,7 @@
 
 
 </html>
+
 
 
 
