--- a/informacion.html
+++ b/informacion.html
@@ -65,18 +65,18 @@
     <h2 class="section-title">PROMOCIÓN</h2>
     <div class="promotion-gallery">
         <!-- Imágenes con evento onclick -->
-        <img src="images/promocion_1.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
-        <img src="images/promocion_2.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_1.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_2.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_3.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_4.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_5.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_6.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_7.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_8.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_9.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_10.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_11.jpg" alt="..." onclick="openModal(this)">
+        <img src="promocion_12.jpg" alt="..." onclick="openModal(this)">
         <!-- ... resto de las 12 imágenes ... -->
     </div>
 </div>
@@ -239,6 +239,7 @@
 
 
 </html>
+
 
 
 
