--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main-content">
         <p class="welcome-text">Bienvenido al Portal SMS</p>
         <h1 class="main-title">Sistema de Gestión de Seguridad Operacional <span>Solar Cargo</span></h1>
-
+               <img src="logo.png" alt="Solar Cargo Logo" class="top-right-logo">
         <div class="action-menu">
             <a href="reporteVoluntario.html" class="menu-btn">
                 <span>REPORTE VOLUNTARIO</span>
